--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           ssh-key: ${{ secrets.DEPLOY_KEY }}
           commit-message: "Update free subscription links"
       - name: update readme files
-        run: node generate_markdown.js ${{ secrets.xboard_api_secret }} ${{ secrets.xboard_api_url }}
+        run: node generate_markdown2.js ${{ secrets.xboard_api_secret }} ${{ secrets.xboard_api_url }}
       - name: Deploy crashgfw free-airport-nodes
         uses: JamesIves/github-pages-deploy-action@v4
         with:
@@ -41,8 +41,8 @@ jobs:
           repository-name: crashgfw/free-airport-nodes
           ssh-key: ${{ secrets.DEPLOY_KEY2 }}
           commit-message: "Update free subscription links"
-      - name: update readme files
-        run: node generate_markdown2.js ${{ secrets.xboard_api_secret }} ${{ secrets.xboard_api_url }}
+      - name: update free-proxy-nodes/free-nodes readme files
+        run: node generate_markdown3.js ${{ secrets.xboard_api_secret }} ${{ secrets.xboard_api_url }}
       - name: Deploy free-proxy-nodes/free-nodes
         uses: JamesIves/github-pages-deploy-action@v4
         with:
@@ -51,4 +51,15 @@ jobs:
           repository-name: free-proxy-nodes/free-nodes
           ssh-key: ${{ secrets.DEPLOY_KEY3 }}
           commit-message: "Update free subscription links"
+      - name: update hiddifyapp350 readme files 
+        run: node generate_markdown4.js ${{ secrets.xboard_api_secret }} ${{ secrets.xboard_api_url }}
+      - name: Deploy free-proxy-nodes/free-nodes
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: 'dest4'
+          branch: 'main'
+          repository-name: hiddifyapp350/free-nodes
+          ssh-key: ${{ secrets.DEPLOY_KEY4 }}
+          commit-message: "Update free subscription links"
+
 
