--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - run: docker info
       - name: Checkout 🛎️
         uses: actions/checkout@v4
-      - name: update expired date and traffic
+      - name: update expiring date and traffic
         run: node update_subscriptions.js ${{ secrets.xboard_api_secret }} ${{ secrets.xboard_api_url }}
       - name: update subscriptions
         run: node fetch_subscriptions.js ${{ secrets.xboard_api_secret }} ${{ secrets.xboard_api_url }}
