--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fetch-retry": "^6.0.0",
     "handlebars": "^4.7.8"
   },
   "devDependencies": {
