--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,6 +67,7 @@ jobs:
 
   update_readme_files:
     runs-on: ubuntu-latest
+    needs: update_subscriptions
     steps:
       - name: Set up Docker
         uses: docker/setup-docker-action@v4
