--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,7 +65,7 @@ jobs:
           ssh-key: ${{ secrets.DEPLOY_KEY4 }}
           commit-message: "Update free subscription links"
 
-  update_readme_files:
+  update_hysteria350_free_jichang_readme:
     runs-on: ubuntu-latest
     needs: update_subscriptions
     steps:
