--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -80,11 +80,35 @@ jobs:
         uses: actions/checkout@v4
       - name: update readme files
         run: node generate_markdown5.js ${{ secrets.xboard_api_secret }} ${{ secrets.xboard_api_url }}
-      - name: Deploy crashgfw free-airport-nodes
+      - name: Deploy hysteria350 free-jichang
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: 'dest5'
           branch: 'main'
           repository-name: hysteria350/free-jichang
           ssh-key: ${{ secrets.DEPLOY_KEY5 }}
+          commit-message: "Update free subscription links"
+
+  update_proxyguide_jichang_recommend_readme:
+    runs-on: ubuntu-latest
+    needs: update_subscriptions
+    steps:
+      - name: Set up Docker
+        uses: docker/setup-docker-action@v4
+        with:
+          version: "26.1.4"
+          channel: test
+      - run: docker version
+      - run: docker info
+      - name: Checkout 🛎️
+        uses: actions/checkout@v4
+      - name: update readme files
+        run: node generate_markdown6.js ${{ secrets.xboard_api_secret }} ${{ secrets.xboard_api_url }}
+      - name: Deploy proxyguide jichang-recommend
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: 'dest5'
+          branch: 'main'
+          repository-name: proxyguide/jichang-recommend
+          ssh-key: ${{ secrets.DEPLOY_KEY6 }}
           commit-message: "Update free subscription links"
